# PaperBot

./: .coderabbit.yaml  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  UI问题修改清单.md  __init__.py  alembic.ini  env.example  main.py  pyproject.toml  pyrightconfig.json  requirements-ci.txt  requirements.txt  sonar-project.properties  un.plan.md  verify_claude.py
.claude/agents/: codex-worker.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  gemini-review.yml  sonarcloud.yml  vercel-auto-deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ExperimentManager/: runner.py
ExperimentManager/configs/: exp_sentiment.yaml
agent_module/: __init__.py
agents/: __init__.py  base_agent.py  code_analysis_agent.py  conference_research_agent.py  quality_agent.py  research_agent.py  reviewer_agent.py  verification_agent.py
agents/mixins/: __init__.py  json_parser.py  semantic_scholar.py  text_parsing.py
agents/prompts/: __init__.py  report_prompts.py
agents/state/: __init__.py  base_state.py  research_state.py
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 0001_baseline_schema.py  0002_research_eval_runs.py  0019_memory_fts5.py  0020_memory_embedding.py  0021_repro_code_experience.py  0022_repro_experience_dedup.py  0023_intelligence_events.py  0024_document_evidence_index.py  0024_users.py  0025_password_reset_tokens.py  0026_embedding_endpoint_settings.py  0027_global_paper_feedback.py  0028_remove_legacy_user_defaults.py  b94c1a2be26e_add_p2c_repro_context_pack_tables.py
asset/: architecture.excalidraw  paperbot-workflow.drawio
cache/scholar_papers/: .gitkeep
cli/: eslint.config.js  package-lock.json  package.json
cli/src/: index.tsx
config/: __init__.py  config.yaml  models.py  push_channels.yaml  scholar_subscriptions.yaml  settings.py  top_venues.yaml  validated_settings.py
core/: __init__.py  base_node.py  errors.py  llm_client.py  pipeline_context.py  state.py  workflow.py  workflow_coordinator.py
core/abstractions/: __init__.py  executable.py
core/collaboration/: __init__.py  bus.py  (+3 more)
datasets/: README.md
docs/: AGENTIC_RESEARCH_EVOLUTION.md  AGENTSWARM_TODO.md  ARCH_INTERACTION_FLOW.drawio  ARCH_LAYER1_INGESTION.drawio  ARCH_LAYER2_STORAGE.drawio  ARCH_LAYER3_RETRIEVAL.drawio  ARCH_LAYER4_GENERATION.drawio  ARCH_LAYER5_FEEDBACK.drawio  ARCH_OVERALL.drawio  AUTO_REVIEW_SETUP.md  BETTAFISH_ACADEMIC_MVP.md  BETTAFISH_RESEARCH.md  DEEPCODE_TODO.md  DETAILED.md  DIRECTORY_STRUCTURE.md  HF_DAILY_SOURCE.md  MVP_DESIGN.md  OPENCLAW_RESEARCH_REPORT.md  P0_memory_scope_acceptance_design.md  P2C_MEMORY_AND_CONTEXT_OPTIMIZATION.md  P2C_MODULE_1_CORE_ENGINE.md  P2C_MODULE_2_API_STORAGE.md  P2C_MODULE_3_FRONTEND.md  PAPERSCOOL_WORKFLOW.md  PAPER_TO_CONTEXT_MODULE_DESIGN.md  PLAN.md  REPORT_TEMPLATES_ACADEMIC.md  SCHOLAR_TRACKING_DESIGN.md  SCHOLAR_TRACKING_USAGE.md  SEMANTIC_SEARCH_TASKS.md  TODO_PERSONALIZED_MEMORY_CONTEXT.md  TOPIC_SOURCE_TEMPLATE.md  UI_MANUAL_TEST.md  USAGE.md  anchor_system.md  context_engine_eval.md  document_evidence_eval.md  memory.md  memory_effectiveness_eval.md  memory_isolation.md  (+10 more)
e2b-template/: README.md  e2b.Dockerfile  e2b.toml
evals/: README.md
influence/: __init__.py  calculator.py  weights.py
prompts/: __init__.py  code_analysis_prompts.py  quality_prompts.py  research_prompts.py  scholar_prompts.py
reports/: __init__.py  core.py  notifier.py  writer.py
repro/: __init__.py  docker_executor.py  generation_agent.py  models.py  planning_agent.py  repro_agent.py
scholar_tracking/: __init__.py  agent.py  cards.py  feed.py  filters.py  scheduler.py
scripts/: audit_daily_push_reports.py  benchmark_memory_performance.py  eval_context_engine.py  eval_document_evidence.py  eval_search.py  memory_ingest.py  p2c_module1_benchmark.py  run_tests.sh  setup_dev.sh  validate_datasets.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_auth_api.py  test_cli_flags.py  test_code_analysis_fallback.py  test_conference_agent_stats.py  test_framework.py  test_generation_agent.py  test_influence_recency.py  test_literature_grounding.py  test_render_report_latest.py  test_repro_agent.py  test_repro_e2e.py  test_repro_models.py  test_repro_planning.py
tools/: __init__.py  search.py
utils/: CCS-DOWN.py  __init__.py  acm_extractor.py  analyzer.py  conference_downloader.py  conference_helpers.py  conference_parsers.py  db.py  downloader - ccs.py  experiment_runner.py  keyword_optimizer.py  retry_helper.py  smart_downloader.py
web/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+1167 files in other folders)
