[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperbot"
version = "2.0.0"
description = "顶会论文分析与学者追踪框架"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PaperBot Team"}
]
keywords = ["paper", "scholar", "analysis", "tracking", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "httpx[http2]>=0.27.0,<0.28.0",
    "aiohttp>=3.8.0",
    "aiofiles>=22.1.0",
    "beautifulsoup4>=4.11.0",
    "cryptography>=41.0.0",
    "lxml>=4.9.0",
    "pydantic[email]>=2.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.19.0",
    "fastapi==0.115.0",
    "starlette>=0.37.2,<0.39.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.6",
    "watchdog>=4.0.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "keyring>=25.0.0",
    "rapidfuzz>=3.0.0",
    "gitpython>=3.1.0",
    "jinja2>=3.1.0",
    "markdown>=3.4.0",
    "json-repair>=0.22.0",
    "arq>=0.25.0,<0.26.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "respx>=0.21.0",
    "aioresponses>=0.7.6",
    "arq>=0.25.0,<0.26.0",
    "redis>=5.0.0",
]
pdf = [
    "pdfplumber>=0.7.0",
    "PyPDF2>=3.0.0",
    "weasyprint>=62.3",
]
push = [
    "apprise>=1.9.0",
    "feedgen>=1.0.0",
]
# Keep torch-family packages out of the package metadata by default.
# They are environment-specific and are usually generated per-reproduction task.
repro = [
    "numpy>=1.24.0",
    "pandas>=1.5.0",
]
sandbox = [
    "docker>=7.0.0",
    "e2b-code-interpreter>=1.0.0",
]
search = [
    "sqlite-vec>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/jerry609/PaperBot"
Repository = "https://github.com/jerry609/PaperBot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
extraPaths = ["src"]
typeCheckingMode = "basic"

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]
